--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,10 @@
             <artifactId>spring-data-redis</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
     </dependencies>
 
